--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.wx.modules</groupId>
     <artifactId>bootstrap-mongomodule2-bridge</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0.0</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
